style.css
body {
	background: #F7F7F7;
	margin: 20px 0;
	font: 14px "Helvetica Neue", Helvetica-Neue, Helvetica, sans-serif;
}

div {
	margin: 0% auto;
	width: 75%;
	min-width: 520px;
	background: #FFF;
	border: 1px solid hsl(0,0%,92%);
	border-radius: 2px;
}

pre {
	padding: 0 20px;
	color: #555;
}

pre span {
	display: block;
}

pre .comment {
	color: hsl(100, 100%, 30%);
}

pre .output {
	color: hsl(0,100%,50%);
}

pre .console {
	color: hsl(200,100%, 30%);
}

pre > span:hover {
	background: hsl(0,0%,95%);
}

pre small {
	display: inline-block;
	font-size: 12px;
	width: 48px;
	color: #999;
}

pre small:after {
	content: ":";
}

h1 {
	font-size: 18px;
	font-weight: 200;
	margin: 20px 20px 0;
	border-bottom: 1px solid hsl(0,0%,90%);
}

